--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@metamask/detect-provider": "^1.2.0",
     "electron": "^12.0.1",
     "filter-obj": "^2.0.1",
     "gatsby": "^2.32.3",
@@ -43,6 +44,7 @@
     "web3": "^1.3.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "prettier": "2.2.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
